--- a/index.html
+++ b/index.html
@@ -14,21 +14,27 @@
 
 <body>
 
-    <section class="flexeble-area">
-        <div class="half-width">
-            <h1>Welcome To</h1>
-            <h1><span class="orange-color">Nasrin sulthana </span> world!</h1>
-            <h3>Build Climber and Train Stopper</h3>
-            <p>You might saw me jumping,climbing buildings,
-                and stopping trains.But nobody pays me a dime
-                for that work.That's why I am learning and
-                mastering web development. I will not stop until I
-                become the Web Development Hero.</p>
-            <a class="link-button" target="_blank" href="https://www.linkedin.com/company/programminghero/">HIRE ME</a>
-        </div>
-        <div class="half-width">
-            <img src="images/kona-pic.png" alt="">
-        </div>
+
+    <section class="top-banner">
+        <section class="flexeble-area">
+
+            <div class="half-width">
+                <h1>Welcome To</h1>
+                <h1><span class="orange-color">Nasrin sulthana </span> world!</h1>
+                <h3>Build Climber and Train Stopper</h3>
+                <p>You might saw me jumping,climbing buildings,
+                    and stopping trains.But nobody pays me a dime
+                    for that work.That's why I am learning and
+                    mastering web development. I will not stop until I
+                    become the Web Development Hero.</p>
+                <a class="link-button" target="_blank" href="https://www.linkedin.com/company/programminghero/">HIRE
+                    ME</a>
+            </div>
+            <div class="half-width">
+                <img src="images/kona-pic.png" alt="">
+            </div>
+        </section>
+    </section>
 
     </section>
 </body>
