--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
 
-    <section class="top-banner">
+    <section class="top-banner flxeble-container">
         <section class="flexeble-area">
 
             <div class="half-width">
@@ -27,7 +27,7 @@
                     for that work.That's why I am learning and
                     mastering web development. I will not stop until I
                     become the Web Development Hero.</p>
-                <a class="link-button" target="_blank" href="https://www.linkedin.com/company/programminghero/">HIRE
+                <a class="link-button" target="_blank" href="https://www.facebook.com/nasrinsulthana.kona">HIRE
                     ME</a>
             </div>
             <div class="half-width">
@@ -35,7 +35,7 @@
             </div>
         </section>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <section class="flexeble-area">
             <div class="half-width">
                 <img src="images/kona2.png" alt="">
@@ -52,8 +52,33 @@
 
         </section>
     </section>
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flxeble-container">
+            <div id="full-stack-developer" class="experience-item">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="orange-color">2024-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript.
+                    I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond
+                    with most popular Javascript framework called Vue JS.
+                    I even know the deployment, server and security.
+                    I will give you 100% web solution.</p>
+            </div>
+            <div id="baby-web-developer" class="experience-item">
+                <h2>Baby Web Developer</h2>
+                <h3 class="orange-color">2022-2024 | Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+    </section>
 
 
 </body>
+<footer>
+    <p>Nasrin sulthana kona 2022,a Programming Hero initiative.</p>
+</footer>
 
 </html>
