--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 </body>
 <footer>
-    <p>Nasrin sulthana kona 2022,a Programming Hero initiative.</p>
+    <p>©Nasrin sulthana kona 2022,a Programming Hero initiative.</p>
 </footer>
 
 </html>
